@@ -1,3 +1,4 @@
+debian/tmp/etc
 debian/tmp/usr/lib
 debian/tmp/usr/bin
 debian/tmp/usr/share/emacs
