@@ -12,8 +12,10 @@ gcl (2.6.4-1) unstable; urgency=low
   * Improve gprof support
   * Improve sgc page allocation which optimize-maximum-pages is in
     effect and the hole is overrun
+  * Build a profiling set of images as well for Debian, toggle between
+    all four by default via debconf
 
- -- Camm Maguire <camm@enhanced.com>  Thu,  5 Aug 2004 22:31:10 +0000
+ -- Camm Maguire <camm@enhanced.com>  Thu,  5 Aug 2004 22:33:29 +0000
 
 gcl (2.6.3-1) unstable; urgency=high
 
